2004-04-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-delete-all-overlays): Remove.

2004-04-07  Masatake YAMATO  <jet@gyve.org>

	* w3m-bitmap.el (w3m-bitmap-image-insert): Enable the evaporate
	property on overlays.

	* w3m-e21.el (w3m-form-make-button): Enable the evaporate property
	on buttun overlays.

	* w3m.el (w3m-fontify-anchors): Ditto.
	(w3m-create-text-page): No need to delete zombie overlays.
	(w3m-create-image-page): Ditto.
	(w3m-highlight-current-anchor-1): Enable the evaporate property on
	overlays.
	(w3m-highlight-current-anchor): No need to delete overlays.

2004-04-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-rendering-extract-title): Remove too much whitespace.

2004-04-05  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-delete-all-overlays): Simply delete all overlays if
	the optional arg is given.
	(w3m-create-text-page): Delete zombie overlays.
	(w3m-create-image-page): Ditto.

2004-04-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-search.el (w3m-search-engine-alist): Improve custom.

2004-04-04  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* w3m-search.el (w3m-search-engine-alist): Add "amazon" entry.

2004-03-31  Yuya Nishida  <yuya@j96.org>

	* w3m-search.el (w3m-search-engine-alist): Add "amazon-ja" entry;
	"PostData" can be specified.
	(w3m-search): Support post-data.

2004-04-04  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* w3m.el (w3m-header-arguments): Set unibyte at work buffer.

	* w3m-form.el (w3m-form-make-form-data): Set unibyte at work buffer;
	Encode form data.

2004-03-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-kantei.el (shimbun-get-headers): Improve regexp in
	order to fetch articles of the English edition.

2004-03-24  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-asahi-mytown.el (shimbun-asahi-mytown-get-headers):
	Adjust the number of years correctly even if an article is very
	old.
	* shimbun/sb-asahi.el (shimbun-asahi-get-headers): Ditto.