@@ -1,3 +1,8 @@
+2004-04-08  Hiroya Murata  <lapis-lazuli@pop06.odn.ne.jp>
+
+	* w3m.el (w3m-delete-all-overlays): Revert.
+	(w3m-highlight-current-anchor): Ditto.
+
 2004-04-07  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* w3m.el (w3m-delete-all-overlays): Remove.
